// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders primary button by default 1`] = `
.c0 {
  height: 30px;
  width: 285px;
  border-radius: 3px;
  font-family: Lato;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  margin-bottom: 1rem;
  cursor: pointer;
  background-color: #69d5b1;
  color: #fff;
  font-family: Lato;
  font-size: 14px;
}

@media (min-width:801px) {
  .c0 {
    height: 30px;
    width: 151px;
    margin: 1rem;
  }
}

<button
  class="sc-AxjAm c0"
/>
`;

exports[`Button component renders secondary button when specified with skin prop 1`] = `
.c0 {
  height: 30px;
  width: 285px;
  border-radius: 3px;
  font-family: Lato;
  font-size: 14px;
  line-height: 17px;
  text-align: center;
  margin-bottom: 1rem;
  cursor: pointer;
  box-sizing: border-box;
  background-color: #fff;
  border: 2px solid #69d5b1;
  color: #69d5b1;
}

@media (min-width:801px) {
  .c0 {
    height: 30px;
    width: 151px;
    margin: 1rem;
  }
}

<div>
  <button
    class="sc-AxjAm c0"
  />
</div>
`;
